--- a/arquivo.html
+++ b/arquivo.html
@@ -7,19 +7,27 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="Perfil">
-        <img src="https://img.freepik.com/fotos-premium/o-ceu-da-paisagem-do-arco-iris-refletiu-a-imagem-de-fundo-da-natureza-da-agua-ai-gerou-a-arte_856480-1354.jpg" class="imagem" >
-        <h1 class="text1">Nicolie Müller</h1>
-        <h5 class="text1">T.I.</h5>
-    </div>
-    <div class="Box">
-        <p class="text2">Viagem</p>
-    </div>
-    <div class="Box">
-        <p class="text2">Casa</p>
-    </div>
-    <div class="Box">
-        <p class="text2">Trabalho</p>
-    </div>
+    <section class="main-section">
+        <div class="perfil">
+           <img src="https://i.pinimg.com/564x/9a/c8/5e/9ac85e1be1d0267a3b628894780fbf44.jpg" class="imagem" >
+        </div>
+        <div  class="text1">
+            <h1>Nicolie Müller</h1>
+            <h3>Técnico de Informática</h3>
+        </div>
+    </section>
+    <section class="double-section">
+        <div class="tent">
+            <div class="Box1">
+                <p class="text2">Friends</p>
+            </div>
+            <div class="Box2">
+                <p class="text2">Love</p>
+            </div>
+            <div class="Box3">
+                <p class="text2">Favorite</p>   
+            </div>
+        </div>
+    </section>
 </body>
 </html>
