--- a/arquivo.html
+++ b/arquivo.html
@@ -19,13 +19,22 @@
     <section class="double-section">
         <div class="tent">
             <div class="Box1">
-                <p class="text2">Friends</p>
+                <img src="https://i.pinimg.com/564x/b2/40/f7/b240f7c5698a11809c1d72539935fb9d.jpg" alt="Foto1" class="foto1">
+                <div class="boxbox">
+                    <p class="text2">Friends</p>
+                </div>
             </div>
             <div class="Box2">
-                <p class="text2">Love</p>
+                <img src="https://i.pinimg.com/564x/4e/2d/3b/4e2d3b4b3496e056421b96b8ca834e51.jpg" alt="Foto2" class="foto2">
+                <div class="boxbox">
+                    <p class="text2">Love</p>
+                </div>
             </div>
             <div class="Box3">
-                <p class="text2">Favorite</p>   
+                <img src="https://i.pinimg.com/564x/2c/11/2b/2c112b27b87cef3f8fed9007c260450e.jpg" alt="Foto3" class="foto3">
+                <div class="boxbox">
+                    <p class="text2">Favorite</p>
+                </div>
             </div>
         </div>
     </section>
